ui_tests/tests/name_resolution/undefined-but-having-lookalikes.stderr
error[E021]: binding `tree-sinner` is not defined in this scope
 --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:7:10
  |
7 | a: Nat = tree-sinner
  |          ^^^^^^^^^^^ 
  |
 help: a binding with a similar name exists in scope: `tree-sitter` (tree-sinntter)

error[E021]: binding `Pathway` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:11:11
   |
11 | P: Type = Pathway
   |           ^^^^^^^ 
   |

error[E021]: binding `kore` is not defined in module `crate`
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:14:14
   |
14 |     a: super.kore.nat.Nat = tree-sinner ;;; @Bug "core" should be suggested for "kore"
   |              ^^^^ 
   |

error[E021]: binding `tree-sinner` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:14:29
   |
14 |     a: super.kore.nat.Nat = tree-sinner ;;; @Bug "core" should be suggested for "kore"
   |                             ^^^^^^^^^^^ 
   |

error[E021]: binding `bet` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:18:47
   |
18 | func (A: Type) (alpha beta gamma-blocker: A): bet =
   |                                               ^^^ 
   |
  help: a binding with a similar name exists in scope: `beta`

error[E021]: binding `identiti` is not defined in module `crates.core`
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:21:10
   |
21 |     core.identiti gamha_blocker
   |          ^^^^^^^^ 
   |

error[E021]: binding `gamha_blocker` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:21:19
   |
21 |     core.identiti gamha_blocker
   |                   ^^^^^^^^^^^^^ 
   |
  help: a binding with a similar name exists in scope: `gamma-blocker` (gamhma_-blocker)

error[E021]: binding `Alppa` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:25:9
   |
25 |         Alppa \omega 0 => onega ;;; @Bug fatal
   |         ^^^^^ 
   |
  help: a binding with a similar name exists in scope: `Alpha` (Alppha)

error[E021]: binding `onega` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/undefined-but-having-lookalikes.lushui:29:21
   |
29 |         \omega 0 => onega
   |                     ^^^^^ 
   |
  help: a binding with a similar name exists in scope: `omega` (onmega)

error: aborting due to 9 previous errors
 note: the error E021 has a detailed explanation
 help: run `lushui explain E021` to view it

